# inverbot_pipeline_dato

./: .gitattributes  .gitignore  README.md  pyproject.toml  test_data_structure_tools.py  test_database_loading.py  test_document_limits.py  test_extract_tool.py  test_full_pipeline.py  test_loader.py  test_pipeline_agent_flow.py  test_processor.py  test_solution_summary.md  test_vector_processing.py  test_vectorizer.py
.claude/: settings.local.json
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
claude/: CHATLOG.md  CLAUDE.md  TASKS.md
knowledge/: prueba.py  prueba2.py
output/test_results/: performance_report_20250807_133311.md  performance_report_20250807_181003.md  performance_report_20250808_105117.md  performance_report_20250808_161304.md  performance_report_20250808_231443.md  performance_report_20250809_112743.md  performance_report_20250809_141122.md
output/try_1/: loading_results_output.txt  normalized_data_output.txt  raw_extraction_output.txt  relationships_data_output.txt  structured_data_output.txt  supabase_loading_report.json  validated_data_output.txt  vector_data_output.txt
output/try_1/supabase_test/: Categoria_Emisor_data.json  (+8 more)
src/inverbot_pipeline_dato/: crew.py  direct_processor.py  enterprise_processor.py  main.py
test_pipeline/: run_test.py  test_crew.py  test_crew_fixed.py  test_pipeline_results.json
test_pipeline/test_config/: agent_config.yaml  task_config.yaml
(+6 files in other folders)
