[project]
name = "inverbot_pipeline_dato"
version = "0.1.0"
description = "Inverbot_Pipeline_Dato using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "firecrawl-py",
    "supabase>=2.0.0",
    "pinecone>=4.0.0",
    "google-generativeai>=0.3.0",
    "PyMuPDF>=1.23.0",
    "tiktoken>=0.5.0",
    "requests>=2.31.0",
]

[project.scripts]
inverbot_pipeline_dato = "inverbot_pipeline_dato.main:run"
run_crew = "inverbot_pipeline_dato.main:run"
train = "inverbot_pipeline_dato.main:train"
replay = "inverbot_pipeline_dato.main:replay"
test = "inverbot_pipeline_dato.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
